--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -41,17 +41,17 @@
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PFD for participants HWB Agenda.pdf</string>
+							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
 							<key>identifier</key>
-							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
+							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
+							<string>PFD for participants HWB Agenda.pdf</string>
 							<key>identifier</key>
-							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
+							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
@@ -64,12 +64,12 @@
 					<key>page0 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-17T15:55:55Z</date>
+						<date>2018-07-17T16:18:28Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>files/large_305117.png</key>
+							<key>files/large_306182.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -79,7 +79,7 @@
 								<key>Size</key>
 								<integer>228083</integer>
 							</dict>
-							<key>files/medium_305102.png</key>
+							<key>files/medium_306079.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -89,7 +89,7 @@
 								<key>Size</key>
 								<integer>159243</integer>
 							</dict>
-							<key>files/medium_305190.png</key>
+							<key>files/medium_306169.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -99,7 +99,27 @@
 								<key>Size</key>
 								<integer>163798</integer>
 							</dict>
-							<key>files/medium_305788.png</key>
+							<key>files/medium_306364.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								UEIK1usj3VmC
+								lRpzHiqKoA==
+								</data>
+								<key>Size</key>
+								<integer>283695</integer>
+							</dict>
+							<key>files/medium_306365.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								UEIK1usj3VmC
+								lRpzHiqKoA==
+								</data>
+								<key>Size</key>
+								<integer>283695</integer>
+							</dict>
+							<key>files/medium_306428.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -109,37 +129,7 @@
 								<key>Size</key>
 								<integer>25838</integer>
 							</dict>
-							<key>files/medium_305791.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								UEIK1usj3VmC
-								lRpzHiqKoA==
-								</data>
-								<key>Size</key>
-								<integer>283695</integer>
-							</dict>
-							<key>files/medium_305806.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								UEIK1usj3VmC
-								lRpzHiqKoA==
-								</data>
-								<key>Size</key>
-								<integer>283695</integer>
-							</dict>
-							<key>files/small_305061.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								PHbChnVk3Z3+
-								Djx4kmy/Lw==
-								</data>
-								<key>Size</key>
-								<integer>541593</integer>
-							</dict>
-							<key>files/small_305102.png</key>
+							<key>files/small_306079.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -149,27 +139,17 @@
 								<key>Size</key>
 								<integer>147975</integer>
 							</dict>
-							<key>files/small_305117.png</key>
+							<key>files/small_306123.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								B7ucwtGc/QUa
-								FI0vCTgb8w==
+								PHbChnVk3Z3+
+								Djx4kmy/Lw==
 								</data>
 								<key>Size</key>
-								<integer>111754</integer>
+								<integer>541593</integer>
 							</dict>
-							<key>files/small_305167.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								ZWE78KlR9Srz
-								PLug/WlfMA==
-								</data>
-								<key>Size</key>
-								<integer>92613</integer>
-							</dict>
-							<key>files/small_305178.png</key>
+							<key>files/small_306160.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -179,7 +159,7 @@
 								<key>Size</key>
 								<integer>260795</integer>
 							</dict>
-							<key>files/small_305190.png</key>
+							<key>files/small_306169.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -189,17 +169,27 @@
 								<key>Size</key>
 								<integer>84396</integer>
 							</dict>
-							<key>files/small_305227.png</key>
+							<key>files/small_306182.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								azBklrZ8XGht
-								8pVeJmzjIg==
+								B7ucwtGc/QUa
+								FI0vCTgb8w==
 								</data>
 								<key>Size</key>
-								<integer>85972</integer>
+								<integer>111754</integer>
 							</dict>
-							<key>files/small_305239.png</key>
+							<key>files/small_306190.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								ZWE78KlR9Srz
+								PLug/WlfMA==
+								</data>
+								<key>Size</key>
+								<integer>92613</integer>
+							</dict>
+							<key>files/small_306201.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -209,7 +199,17 @@
 								<key>Size</key>
 								<integer>89938</integer>
 							</dict>
-							<key>files/small_305378.png</key>
+							<key>files/small_306219.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								azBklrZ8XGht
+								8pVeJmzjIg==
+								</data>
+								<key>Size</key>
+								<integer>85972</integer>
+							</dict>
+							<key>files/small_306252.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -219,7 +219,7 @@
 								<key>Size</key>
 								<integer>61740</integer>
 							</dict>
-							<key>files/small_305402.png</key>
+							<key>files/small_306268.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -229,17 +229,7 @@
 								<key>Size</key>
 								<integer>12561</integer>
 							</dict>
-							<key>files/small_305554.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								Cg4UULlHMDzQ
-								/PBHaO3Idg==
-								</data>
-								<key>Size</key>
-								<integer>41009</integer>
-							</dict>
-							<key>files/small_305555.png</key>
+							<key>files/small_306295.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -249,17 +239,37 @@
 								<key>Size</key>
 								<integer>24860</integer>
 							</dict>
-							<key>files/small_305684.png</key>
+							<key>files/small_306332.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								iWPmO+FX8ThK
-								m6thUHM2qA==
+								Cg4UULlHMDzQ
+								/PBHaO3Idg==
 								</data>
 								<key>Size</key>
-								<integer>29415</integer>
+								<integer>41009</integer>
 							</dict>
-							<key>files/small_305788.png</key>
+							<key>files/small_306364.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Leh61kFYO9HX
+								fJwmuX9bzQ==
+								</data>
+								<key>Size</key>
+								<integer>81683</integer>
+							</dict>
+							<key>files/small_306365.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Leh61kFYO9HX
+								fJwmuX9bzQ==
+								</data>
+								<key>Size</key>
+								<integer>81683</integer>
+							</dict>
+							<key>files/small_306428.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -269,27 +279,17 @@
 								<key>Size</key>
 								<integer>21536</integer>
 							</dict>
-							<key>files/small_305791.png</key>
+							<key>files/small_306446.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Leh61kFYO9HX
-								fJwmuX9bzQ==
+								iWPmO+FX8ThK
+								m6thUHM2qA==
 								</data>
 								<key>Size</key>
-								<integer>81683</integer>
+								<integer>29415</integer>
 							</dict>
-							<key>files/small_305806.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								Leh61kFYO9HX
-								fJwmuX9bzQ==
-								</data>
-								<key>Size</key>
-								<integer>81683</integer>
-							</dict>
-							<key>files/small_305829.png</key>
+							<key>files/small_306460.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -319,7 +319,7 @@
 								<key>Size</key>
 								<integer>68548</integer>
 							</dict>
-							<key>files/stacks_in_p305887_n7_page0_export.php</key>
+							<key>files/stacks_in_p306464_n7_page0_export.php</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -329,7 +329,7 @@
 								<key>Size</key>
 								<integer>4408</integer>
 							</dict>
-							<key>files/stacks_in_p305887_n7_page0_phpinsert.php</key>
+							<key>files/stacks_in_p306464_n7_page0_phpinsert.php</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -339,7 +339,7 @@
 								<key>Size</key>
 								<integer>7910</integer>
 							</dict>
-							<key>files/stacks_in_p305887_n7_page0_phpmailer.php</key>
+							<key>files/stacks_in_p306464_n7_page0_phpmailer.php</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -349,7 +349,7 @@
 								<key>Size</key>
 								<integer>10749</integer>
 							</dict>
-							<key>files/stacks_in_p305887_n7_page0_phpmailer2.php</key>
+							<key>files/stacks_in_p306464_n7_page0_phpmailer2.php</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -363,18 +363,18 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								kCKtlIF17siR
-								PYe3YZwtMQ==
+								m3oHTJzHfFGN
+								GDGOo6wzcA==
 								</data>
 								<key>Size</key>
-								<integer>209163</integer>
+								<integer>223320</integer>
 							</dict>
 							<key>files/stacks_page_page0.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								58objukvDwm/
-								FtMVXSpiLA==
+								fjPfaLdmxIWH
+								pQq7Tr2+ag==
 								</data>
 								<key>Size</key>
 								<integer>29266</integer>
@@ -383,11 +383,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								fuajTjHNIetE
-								xSo6cJ/k9w==
+								9fySPLs9bQa0
+								vMb9eagbCw==
 								</data>
 								<key>Size</key>
-								<integer>143622</integer>
+								<integer>148143</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8686,7 +8686,7 @@
 					<key>rw:theme:foundation - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-17T15:55:55Z</date>
+						<date>2018-07-17T16:18:28Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8705,31 +8705,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9qY8i5WIVn+H
-								k8+txYIDeg==
+								XcqkOC8KZUQK
+								SE6q49HVdg==
 								</data>
 								<key>Size</key>
-								<integer>134944</integer>
+								<integer>134945</integer>
 							</dict>
 							<key>ie8.min.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								fQWPYERb4jlS
-								JRd45q9xBA==
+								xx7UIVUPpRSq
+								2Y6LRTuybw==
 								</data>
 								<key>Size</key>
-								<integer>27444</integer>
+								<integer>27445</integer>
 							</dict>
 							<key>ie8rem.min.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								DHhzOLR4+np4
-								mmq+1xouYA==
+								mNmqAGa5+9hM
+								kRw2O7uA8g==
 								</data>
 								<key>Size</key>
-								<integer>2545</integer>
+								<integer>2546</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8757,7 +8757,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HAfySGxjtxgAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HAfycrnqiXgAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -8768,7 +8768,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcB/JIbGPauA
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcB/JyuepUiA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
