--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-17T15:55:55Z</date>
+						<date>2018-07-17T17:43:49Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -262,11 +262,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ENNNyIrQIJsR
-								oSvjcdMzPQ==
+								eOOgryoKKKyn
+								q7WUY1w3Fw==
 								</data>
 								<key>Size</key>
-								<integer>131854</integer>
+								<integer>131841</integer>
 							</dict>
 							<key>files/stacks_page_page35.js</key>
 							<dict>
@@ -282,8 +282,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								7M6DXo9nirEf
-								yX3HLuQnkg==
+								jTLTDNEWbfFl
+								7sqEFiGMZA==
 								</data>
 								<key>Size</key>
 								<integer>67093</integer>
