--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -64,7 +64,7 @@
 					<key>page0 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-17T16:18:28Z</date>
+						<date>2018-07-17T18:43:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -363,11 +363,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								m3oHTJzHfFGN
-								GDGOo6wzcA==
+								EM3EI+SeU7ZV
+								1vsMtIWhRA==
 								</data>
 								<key>Size</key>
-								<integer>223320</integer>
+								<integer>223677</integer>
 							</dict>
 							<key>files/stacks_page_page0.js</key>
 							<dict>
@@ -400,7 +400,7 @@
 					<key>page1 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-16T19:29:00Z</date>
+						<date>2018-07-17T18:43:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -679,11 +679,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								TUPGEJQdYGG5
-								5RZkQ/nBxg==
+								4kVCPcYiJbbM
+								94eeo9phjg==
 								</data>
 								<key>Size</key>
-								<integer>135368</integer>
+								<integer>135557</integer>
 							</dict>
 							<key>index_files/stacks_page_page1.js</key>
 							<dict>
@@ -4526,7 +4526,7 @@
 					<key>page47 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-16T19:29:00Z</date>
+						<date>2018-07-17T18:43:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4735,11 +4735,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								pugXoApOqhiq
-								de1cIHMfPw==
+								yoJuJUc1ufy1
+								skIdjAUqhQ==
 								</data>
 								<key>Size</key>
-								<integer>167488</integer>
+								<integer>167924</integer>
 							</dict>
 							<key>files/stacks_page_page47.js</key>
 							<dict>
@@ -7090,7 +7090,7 @@
 					<key>page7 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-16T20:57:57Z</date>
+						<date>2018-07-17T18:43:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7319,11 +7319,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								w7L+/vYGekzd
-								H6xiemoy7Q==
+								Mwhof6r5UL4+
+								Os++mgZtzQ==
 								</data>
 								<key>Size</key>
-								<integer>206937</integer>
+								<integer>215480</integer>
 							</dict>
 							<key>files/stacks_page_page7.js</key>
 							<dict>
@@ -7339,11 +7339,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								hNmZZp0oIeSu
-								RP4DIYXGFg==
+								nUhY2wXns/Yl
+								+9qbiVK3eA==
 								</data>
 								<key>Size</key>
-								<integer>120804</integer>
+								<integer>121266</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8757,7 +8757,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HAfycrnqiXgAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HAfzgohAx0gAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -8768,7 +8768,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcB/JyuepUiA
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcB/OCiEEV6A
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
