--- a/vermontcomplexsystems-foundation.rw/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-16T19:29:00Z</date>
+						<date>2018-07-17T18:43:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -314,11 +314,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								TUPGEJQdYGG5
-								5RZkQ/nBxg==
+								4kVCPcYiJbbM
+								94eeo9phjg==
 								</data>
 								<key>Size</key>
-								<integer>135368</integer>
+								<integer>135557</integer>
 							</dict>
 							<key>index_files/stacks_page_page1.js</key>
 							<dict>
