--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-16T20:57:57Z</date>
+						<date>2018-07-17T18:43:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -262,11 +262,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								w7L+/vYGekzd
-								H6xiemoy7Q==
+								Mwhof6r5UL4+
+								Os++mgZtzQ==
 								</data>
 								<key>Size</key>
-								<integer>206937</integer>
+								<integer>215480</integer>
 							</dict>
 							<key>files/stacks_page_page7.js</key>
 							<dict>
@@ -282,11 +282,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								hNmZZp0oIeSu
-								RP4DIYXGFg==
+								nUhY2wXns/Yl
+								+9qbiVK3eA==
 								</data>
 								<key>Size</key>
-								<integer>120804</integer>
+								<integer>121266</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
