--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/2-Certificate-of-Graduate-Study-in-Complex-Systems/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/2-Certificate-of-Graduate-Study-in-Complex-Systems/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-16T19:29:00Z</date>
+						<date>2018-07-17T18:43:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -242,11 +242,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								pugXoApOqhiq
-								de1cIHMfPw==
+								yoJuJUc1ufy1
+								skIdjAUqhQ==
 								</data>
 								<key>Size</key>
-								<integer>167488</integer>
+								<integer>167924</integer>
 							</dict>
 							<key>files/stacks_page_page47.js</key>
 							<dict>
