--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-17T16:18:28Z</date>
+						<date>2018-07-17T18:43:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -332,11 +332,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								m3oHTJzHfFGN
-								GDGOo6wzcA==
+								EM3EI+SeU7ZV
+								1vsMtIWhRA==
 								</data>
 								<key>Size</key>
-								<integer>223320</integer>
+								<integer>223677</integer>
 							</dict>
 							<key>files/stacks_page_page0.js</key>
 							<dict>
