--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -33,12 +33,12 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-16T20:57:57Z</date>
+						<date>2018-07-17T18:50:07Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>files/medium_525351.png</key>
+							<key>files/medium_526487.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -48,27 +48,7 @@
 								<key>Size</key>
 								<integer>144349</integer>
 							</dict>
-							<key>files/medium_525445.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								ThbhVSq18Yh6
-								MTZGDSx1Cw==
-								</data>
-								<key>Size</key>
-								<integer>271685</integer>
-							</dict>
-							<key>files/medium_526278.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								yqKjmXAuuI/H
-								V55dPXO2oQ==
-								</data>
-								<key>Size</key>
-								<integer>45933</integer>
-							</dict>
-							<key>files/medium_526287.png</key>
+							<key>files/medium_526555.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -78,7 +58,27 @@
 								<key>Size</key>
 								<integer>146901</integer>
 							</dict>
-							<key>files/medium_526394.png</key>
+							<key>files/medium_526562.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								yqKjmXAuuI/H
+								V55dPXO2oQ==
+								</data>
+								<key>Size</key>
+								<integer>45933</integer>
+							</dict>
+							<key>files/medium_526595.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								ThbhVSq18Yh6
+								MTZGDSx1Cw==
+								</data>
+								<key>Size</key>
+								<integer>271685</integer>
+							</dict>
+							<key>files/medium_526609.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -88,7 +88,7 @@
 								<key>Size</key>
 								<integer>822643</integer>
 							</dict>
-							<key>files/medium_526405.png</key>
+							<key>files/medium_526852.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -98,7 +98,7 @@
 								<key>Size</key>
 								<integer>46033</integer>
 							</dict>
-							<key>files/small_525351.png</key>
+							<key>files/small_526487.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -108,7 +108,7 @@
 								<key>Size</key>
 								<integer>181544</integer>
 							</dict>
-							<key>files/small_525391.png</key>
+							<key>files/small_526521.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -118,47 +118,7 @@
 								<key>Size</key>
 								<integer>297020</integer>
 							</dict>
-							<key>files/small_525445.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								n9wWAOxLo/Lt
-								BaYSFx1EpQ==
-								</data>
-								<key>Size</key>
-								<integer>124521</integer>
-							</dict>
-							<key>files/small_525544.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								aVucEX/LGt4i
-								ajwJpZoRNg==
-								</data>
-								<key>Size</key>
-								<integer>69167</integer>
-							</dict>
-							<key>files/small_525567.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								b3O8Q72TM7st
-								943t+oEDew==
-								</data>
-								<key>Size</key>
-								<integer>29114</integer>
-							</dict>
-							<key>files/small_526278.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								jtf94fXp6KXK
-								x5TjecKAvw==
-								</data>
-								<key>Size</key>
-								<integer>35180</integer>
-							</dict>
-							<key>files/small_526287.png</key>
+							<key>files/small_526555.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -168,27 +128,27 @@
 								<key>Size</key>
 								<integer>39855</integer>
 							</dict>
-							<key>files/small_526315.png</key>
+							<key>files/small_526562.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								TwRQXkiOZl3g
-								IeSziM45aQ==
+								jtf94fXp6KXK
+								x5TjecKAvw==
 								</data>
 								<key>Size</key>
-								<integer>291484</integer>
+								<integer>35180</integer>
 							</dict>
-							<key>files/small_526345.png</key>
+							<key>files/small_526595.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								S0uNFCz0Hh8y
-								dYZ0pT95hg==
+								n9wWAOxLo/Lt
+								BaYSFx1EpQ==
 								</data>
 								<key>Size</key>
-								<integer>370048</integer>
+								<integer>124521</integer>
 							</dict>
-							<key>files/small_526394.png</key>
+							<key>files/small_526609.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -198,17 +158,57 @@
 								<key>Size</key>
 								<integer>410595</integer>
 							</dict>
-							<key>files/small_526405.png</key>
+							<key>files/small_526640.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								l/pk2fkfAyEW
-								r9U/im3grQ==
+								S0uNFCz0Hh8y
+								dYZ0pT95hg==
 								</data>
 								<key>Size</key>
-								<integer>35162</integer>
+								<integer>370048</integer>
 							</dict>
-							<key>files/small_526412.png</key>
+							<key>files/small_526666.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								TwRQXkiOZl3g
+								IeSziM45aQ==
+								</data>
+								<key>Size</key>
+								<integer>291484</integer>
+							</dict>
+							<key>files/small_526694.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								aVucEX/LGt4i
+								ajwJpZoRNg==
+								</data>
+								<key>Size</key>
+								<integer>69167</integer>
+							</dict>
+							<key>files/small_526710.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								b3O8Q72TM7st
+								943t+oEDew==
+								</data>
+								<key>Size</key>
+								<integer>29114</integer>
+							</dict>
+							<key>files/small_526735.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								SjZ09NdtnBQZ
+								WTbIICY9gA==
+								</data>
+								<key>Size</key>
+								<integer>123389</integer>
+							</dict>
+							<key>files/small_526761.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -218,7 +218,7 @@
 								<key>Size</key>
 								<integer>109339</integer>
 							</dict>
-							<key>files/small_526443.png</key>
+							<key>files/small_526791.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -228,15 +228,15 @@
 								<key>Size</key>
 								<integer>262942</integer>
 							</dict>
-							<key>files/small_526451.png</key>
+							<key>files/small_526852.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								SjZ09NdtnBQZ
-								WTbIICY9gA==
+								l/pk2fkfAyEW
+								r9U/im3grQ==
 								</data>
 								<key>Size</key>
-								<integer>123389</integer>
+								<integer>35162</integer>
 							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
@@ -262,11 +262,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								w7L+/vYGekzd
-								H6xiemoy7Q==
+								TzG3X5Mwcqyv
+								uqRM6WOmuw==
 								</data>
 								<key>Size</key>
-								<integer>206937</integer>
+								<integer>215480</integer>
 							</dict>
 							<key>files/stacks_page_page7.js</key>
 							<dict>
@@ -282,11 +282,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								hNmZZp0oIeSu
-								RP4DIYXGFg==
+								BS2chG1GRnjd
+								CZ35Igj7Kg==
 								</data>
 								<key>Size</key>
-								<integer>120804</integer>
+								<integer>120978</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
