Hide empy pages from nav

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -5604,7 +5604,7 @@
 					<key>page50 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-11T18:51:20Z</date>
+						<date>2018-07-17T19:07:33Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5663,11 +5663,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								atgja2lFxsN9
-								tQ+NZHeEVw==
+								uRnHUzFnZfhb
+								sAbHX3JqVw==
 								</data>
 								<key>Size</key>
-								<integer>95007</integer>
+								<integer>95931</integer>
 							</dict>
 							<key>files/stacks_page_page50.js</key>
 							<dict>
@@ -5683,11 +5683,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								nry0YR1y2xR/
-								gnpo81O71Q==
+								KiTmHOz3WvoZ
+								20QE7+eC4A==
 								</data>
 								<key>Size</key>
-								<integer>34839</integer>
+								<integer>35579</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7528,7 +7528,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-17T18:50:07Z</date>
+						<date>2018-07-17T19:07:33Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7577,11 +7577,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								DkJA+22y9L7m
-								qQnHRwrBSg==
+								JsKOokJrxLjE
+								uc3+AOx9Fw==
 								</data>
 								<key>Size</key>
-								<integer>4134</integer>
+								<integer>4166</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7630,7 +7630,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-17T18:50:07Z</date>
+						<date>2018-07-17T19:07:33Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8669,11 +8669,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								CczgcQS6z/xA
-								kUK5wOQMvw==
+								UU94Ku/+iPbb
+								Jjgo1/q23w==
 								</data>
 								<key>Size</key>
-								<integer>3290</integer>
+								<integer>3697</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8757,8 +8757,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcB/OPEq
-				qQSAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcB/Ovu+
+				97qAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -8768,7 +8768,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcB/OPEqrS6A
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcB/Ovu+++yA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
