--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/5-Potential-funding/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/5-Potential-funding/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-11T18:51:20Z</date>
+						<date>2018-07-17T19:07:33Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -92,11 +92,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								atgja2lFxsN9
-								tQ+NZHeEVw==
+								uRnHUzFnZfhb
+								sAbHX3JqVw==
 								</data>
 								<key>Size</key>
-								<integer>95007</integer>
+								<integer>95931</integer>
 							</dict>
 							<key>files/stacks_page_page50.js</key>
 							<dict>
@@ -112,11 +112,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								nry0YR1y2xR/
-								gnpo81O71Q==
+								KiTmHOz3WvoZ
+								20QE7+eC4A==
 								</data>
 								<key>Size</key>
-								<integer>34839</integer>
+								<integer>35579</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
